--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -44,7 +44,7 @@ body {
 .hero-section {
     position: relative;
     width: 100%;
-    max-height: 80vh; /* Altura máxima em desktop (60% da viewport) */
+    height: 70vh;
     overflow: hidden;
     display: flex; /* Para centralizar o texto */
     align-items: center;
@@ -54,7 +54,7 @@ body {
 .hero-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Garante que a imagem cubra toda a área */
+    object-fit: cover;
 }
 
 /* Estilo do Texto Sobreposto na Imagem */
@@ -89,6 +89,7 @@ body {
 /* ========================================================== */
 .info-section {
     max-width: 1200px;
+    height: 20vh;
     margin: 40px auto;
     padding: 0 20px;
     text-align: center;
@@ -105,6 +106,7 @@ body {
     color: #cbcfd1;
     border: none;
     transition: transform 0.2s, box-shadow 0.2s;
+    min-width: 200px;
 }
 
 .cta-button a {
@@ -128,16 +130,36 @@ body {
     .main-content {
         min-height: 100vh;
     }
+    .main-content p {
+        height: 100vh;
+    }
     .hero-text-overlay h2 {
-        font-size: 1.5rem; /* Diminui o texto sobreposto */
+        font-size: 1.5rem;
+        margin: 10px auto;
     }
 
     .hero-section {
-        max-height: 40vh; /* Diminui a altura da imagem no mobile */
+        max-height: 70vh;
+        width: 100%;
     }
 
     /* Estilo básico para garantir que o texto não fique atrás do header expandido */
     .header-spacer {
         height: 100px; /* Aumenta o espaçamento para o header expandido */
+    }
+
+    .info-section {
+        width: 100%;
+        height: 25vh;
+        margin: 40px auto;
+        padding: 0;
+        text-align: center;
+        color: var(--color-text-primary);
+    }
+
+    .info-section p {
+        width: 70%;
+        text-align: center;
+        margin: 10px auto;
     }
 }
