--- a/frontend/src/pages/PosCompraPage.css
+++ b/frontend/src/pages/PosCompraPage.css
@@ -129,6 +129,13 @@
     margin-bottom: 10px;
 }
 
+.pc-content-area p {
+    line-height: 1.7;
+    margin: 15px 0;
+    /* font-weight: 500; */
+    font-size: 0.9rem;
+}
+
 .info-card-highlight {
     background-color: #fff8e1; /* Amarelo bem claro */
     border-left: 4px solid var(--color-action-link);
