--- a/frontend/src/pages/CreateSinteticoPage.css
+++ b/frontend/src/pages/CreateSinteticoPage.css
@@ -34,6 +34,11 @@
     border-radius: 6px;
     background-color: white;
     font-size: 1rem;
+    color: rgb(90, 90, 90);
+}
+
+.color-opcao {
+    color: #353535;
 }
 
 @media (max-width: 600px) {
