--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,16 +6,11 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
+    /* color: rgba(255, 255, 255, 0.87); */
     /* background-color: #b0b6ba; */
 
-    background: #ffffff;
-    /* background: #e3e3e3;
-    background: linear-gradient(
-        148deg,
-        rgba(227, 227, 227, 1) 36%,
-        rgba(252, 251, 194, 1) 100%
-    ); */
+    background: #fafafa;
+
     background-repeat: no-repeat;
 
     /* 3. Garante que a imagem cubra toda a área visível, sem esticar */
@@ -29,6 +24,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html,
 body {
     margin: 0;
@@ -36,6 +37,9 @@ body {
     height: 100%; /* Garante que o body ocupe a altura total */
     scroll-behavior: smooth;
     font-family: 'Inter', Arial, sans-serif;
+    width: 100%;
+    overflow-x: hidden; /* Corta qualquer coisa que passe da largura da tela */
+    color: #474747;
 }
 h1,
 h2,
