--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -58,9 +58,9 @@
     width: 200px;
     height: 230px;
     border: 1px solid var(--color-text-primary);
-    background-color: var(--color-neutral-accent);
+    background-color: #f7ffd3;
     border-radius: 8px;
-    box-shadow: 0 4px 8px var(--color-box-shadow);
+    box-shadow: 0 0 20px #00000070;
 
     /* Estilos de Display */
     text-align: center;
@@ -74,8 +74,8 @@
 }
 
 .admin-card:hover {
-    transform: translateY(-5px); /* Efeito 3D ao passar o mouse */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra mais forte */
+    /* transform: translateY(5px); */
+    box-shadow: 0 0 0px #00000070;
 }
 
 /* ========================================================== */
@@ -91,7 +91,7 @@
 
 .card-title {
     margin: 5px 0;
-    color: var(--color-text-primary);
+    color: #000000;
 }
 
 .card-description {
