--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -48,7 +48,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: var(--color-action-link);
+    color: #ffffbc;
 }
 
 .logo-section h1 {
@@ -60,14 +60,14 @@
     width: 32px;
     height: 32px;
     margin-right: 10px;
-    color: var(--color-action-link);
+    color: #ffffbc;
 }
 
 .logo-title {
     font-size: 1.8rem;
     font-weight: bold;
     margin: 0;
-    color: #fefe85;
+    color: #ffffbc;
 }
 
 /* NAVEGAÇÃO DESKTOP */
@@ -77,7 +77,7 @@
     margin-left: 15px;
     font-size: 0.8rem;
     text-decoration: none;
-    color: #fefe85;
+    color: #ffffbc;
     transition: color 0.2s;
 }
 
@@ -127,7 +127,7 @@
     top: 100%;
     left: 0;
 
-    background-color: rgb(221, 235, 171);
+    background-color: #ffffbc;
     min-width: 200px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1001;
