--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -41,7 +41,8 @@
 
 .admin-cards-grid {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+
     flex-wrap: wrap;
 }
 
@@ -56,9 +57,9 @@
     padding: 20px;
     margin: 10px;
     width: 200px;
-    height: 230px;
+    height: 300px;
     border: 1px solid var(--color-text-primary);
-    background-color: #f7ffd3;
+    background-color: #d8c72f;
     border-radius: 8px;
     box-shadow: 0 0 20px #00000070;
 
@@ -67,6 +68,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 10px;
 
     /* Transições e Hover */
     transition: transform 0.2s, box-shadow 0.2s;
