--- a/frontend/src/pages/auth/LoginPage.css
+++ b/frontend/src/pages/auth/LoginPage.css
@@ -22,21 +22,19 @@
 /* CONTAINER PRINCIPAL E CARD */
 /* ========================================================== */
 .login-container {
-    /* Centraliza o card vertical e horizontalmente */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* Adiciona margem no topo para evitar o header fixo */
-    min-height: 100vh; /* Ocupa a altura mínima da tela */
+    min-height: 100vh;
+    padding: 100px 0;
 }
 
 .login-card {
     width: 100%;
-    max-width: 400px;
-    padding: 40px;
+    max-width: 600px;
+    padding: 10px 40px;
     border-radius: 12px;
     background-color: white;
-    /* Sombra elegante e suave */
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     border: 1px solid var(--color-neutral-accent);
 }
@@ -102,9 +100,7 @@
 }
 
 .login-button:hover {
-    background-color: var(
-        --color-text-primary
-    ); /* Tom um pouco mais escuro no hover */
+    background-color: var(--color-text-primary);
 }
 
 .error-message {
@@ -116,7 +112,6 @@
 
 .register-link-text {
     text-align: center;
-    width: 100%;
     margin-top: 25px;
     font-size: 0.95rem;
     color: var(--color-neutral-accent);
